// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`engine snapshot parity > fixture 1: standard dual-income household 1`] = `
{
  "accountDepletions": [],
  "finalYear": {
    "age": 89,
    "endBalance": 25464271.77,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 7536212.48,
    "projectedExpenses": 151024.87,
    "totalWithdrawal": 193621.63,
  },
  "sustainableWithdrawal": 193621.63,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 243340.46,
    "phase": "accumulation",
    "projectedSalary": 150000,
    "slotCount": 5,
    "totalEmployee": 31250,
    "totalEmployer": 3750,
  },
}
`;

exports[`engine snapshot parity > fixture 2: single person, no employer match 1`] = `
{
  "accountDepletions": [],
  "finalYear": {
    "age": 89,
    "endBalance": 9555523.94,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 3387765.94,
    "projectedExpenses": 100683.24,
    "totalWithdrawal": 129081.08,
  },
  "sustainableWithdrawal": 129081.08,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 71635.55,
    "phase": "accumulation",
    "projectedSalary": 85000,
    "slotCount": 5,
    "totalEmployee": 17708.33,
    "totalEmployer": 0,
  },
}
`;

exports[`engine snapshot parity > fixture 3: all accounts maxed, overflow to brokerage 1`] = `
{
  "accountDepletions": [],
  "finalYear": {
    "age": 89,
    "endBalance": 112688375.12,
  },
  "firstOverflowAge": 35,
  "firstOverflowAmount": 66700,
  "firstOverflowYear": 2025,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 24732149.63,
    "projectedExpenses": 151024.87,
    "totalWithdrawal": 193621.63,
  },
  "sustainableWithdrawal": 193621.63,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 346495.65,
    "phase": "accumulation",
    "projectedSalary": 300000,
    "slotCount": 5,
    "totalEmployee": 125000,
    "totalEmployer": 7500,
  },
}
`;

exports[`engine snapshot parity > fixture 4: retirement phase only (age > retirement age) 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 67,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 67,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "401k",
      "depletionAge": 81,
      "depletionYear": 2039,
      "subType": "traditional",
    },
    {
      "category": "401k",
      "depletionAge": 86,
      "depletionYear": 2044,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 1595973.16,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 67,
    "endBalance": 930076.92,
    "projectedExpenses": 60000,
    "totalWithdrawal": 30769.23,
  },
  "sustainableWithdrawal": 30769.23,
  "totalYears": 23,
  "warningCount": 1,
  "year0": {
    "endBalance": 930076.92,
    "phase": "decumulation",
    "projectedExpenses": 60000,
    "totalWithdrawal": 30769.23,
  },
}
`;

exports[`engine snapshot parity > fixture 5: zero balances, zero contributions 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 65,
      "depletionYear": 2055,
      "subType": "traditional",
    },
    {
      "category": "401k",
      "depletionAge": 65,
      "depletionYear": 2055,
      "subType": "roth",
    },
    {
      "category": "403b",
      "depletionAge": 65,
      "depletionYear": 2055,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 65,
      "depletionYear": 2055,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 65,
      "depletionYear": 2055,
      "subType": "traditional",
    },
    {
      "category": "ira",
      "depletionAge": 65,
      "depletionYear": 2055,
      "subType": "roth",
    },
    {
      "category": "hsa",
      "depletionAge": 65,
      "depletionYear": 2055,
      "subType": undefined,
    },
    {
      "category": "brokerage",
      "depletionAge": 65,
      "depletionYear": 2055,
      "subType": undefined,
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 0,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": 65,
  "portfolioDepletionYear": 2055,
  "retirementYear": {
    "age": 65,
    "endBalance": 0,
    "projectedExpenses": 151024.87,
    "totalWithdrawal": 0,
  },
  "sustainableWithdrawal": 0,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 0,
    "phase": "accumulation",
    "projectedSalary": 100000,
    "slotCount": 5,
    "totalEmployee": 0,
    "totalEmployer": 0,
  },
}
`;

exports[`engine snapshot parity > fixture 6: with contribution specs (per-account routing) 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 65,
      "depletionYear": 2055,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 65,
      "depletionYear": 2055,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 25593294.62,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 7561648.87,
    "projectedExpenses": 151024.87,
    "totalWithdrawal": 193621.63,
  },
  "sustainableWithdrawal": 193621.63,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 246681.98,
    "phase": "accumulation",
    "projectedSalary": 150000,
    "slotCount": 4,
    "totalEmployee": 34408.33,
    "totalEmployer": 3750,
  },
}
`;

exports[`engine snapshot parity > fixture 7: bracket filling routing mode 1`] = `
{
  "accountDepletions": [],
  "finalYear": {
    "age": 89,
    "endBalance": 41600705.87,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 10717455.9,
    "projectedExpenses": 151024.87,
    "totalWithdrawal": 193621.63,
  },
  "sustainableWithdrawal": 193621.63,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 661251.24,
    "phase": "accumulation",
    "projectedSalary": 150000,
    "slotCount": 5,
    "totalEmployee": 31250,
    "totalEmployer": 3750,
  },
}
`;

exports[`engine snapshot parity > fixture 8: life change overrides — salary and budget mid-projection 1`] = `
{
  "accountDepletions": [],
  "finalYear": {
    "age": 89,
    "endBalance": 30308439.88,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 8250206.82,
    "projectedExpenses": 139036.62,
    "totalWithdrawal": 178252.08,
  },
  "sustainableWithdrawal": 178252.08,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 243340.46,
    "phase": "accumulation",
    "projectedSalary": 150000,
    "slotCount": 5,
    "totalEmployee": 31250,
    "totalEmployer": 3750,
  },
}
`;

exports[`engine snapshot parity > fixture 9: decumulation override with reset:true reverts to defaults 1`] = `
{
  "accountDepletions": [],
  "finalYear": {
    "age": 89,
    "endBalance": 25464271.77,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 7536212.48,
    "projectedExpenses": 151024.87,
    "totalWithdrawal": 193621.63,
  },
  "sustainableWithdrawal": 193621.63,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 243340.46,
    "phase": "accumulation",
    "projectedSalary": 150000,
    "slotCount": 5,
    "totalEmployee": 31250,
    "totalEmployer": 3750,
  },
}
`;

exports[`engine snapshot parity > fixture 10: bracket-filling withdrawal with rothBracketTarget on override 1`] = `
{
  "accountDepletions": [],
  "finalYear": {
    "age": 89,
    "endBalance": 42417740.69,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 10878531.54,
    "projectedExpenses": 151024.87,
    "totalWithdrawal": 193621.63,
  },
  "sustainableWithdrawal": 193621.63,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 682411.28,
    "phase": "accumulation",
    "projectedSalary": 150000,
    "slotCount": 5,
    "totalEmployee": 31250,
    "totalEmployer": 3750,
  },
}
`;

exports[`engine snapshot parity > fixture 11: waterfall withdrawal order — brokerage first 1`] = `
{
  "accountDepletions": [
    {
      "category": "brokerage",
      "depletionAge": 78,
      "depletionYear": 2068,
      "subType": undefined,
    },
    {
      "category": "ira",
      "depletionAge": 82,
      "depletionYear": 2072,
      "subType": "traditional",
    },
    {
      "category": "ira",
      "depletionAge": 86,
      "depletionYear": 2076,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 41953128.39,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 10576079.2,
    "projectedExpenses": 151024.87,
    "totalWithdrawal": 175211.58,
  },
  "sustainableWithdrawal": 175211.58,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 640091.2,
    "phase": "accumulation",
    "projectedSalary": 150000,
    "slotCount": 5,
    "totalEmployee": 31250,
    "totalEmployer": 3750,
  },
}
`;

exports[`engine snapshot parity > fixture 12: percentage withdrawal mode 1`] = `
{
  "accountDepletions": [
    {
      "category": "ira",
      "depletionAge": 69,
      "depletionYear": 2059,
      "subType": "traditional",
    },
    {
      "category": "hsa",
      "depletionAge": 73,
      "depletionYear": 2063,
      "subType": undefined,
    },
    {
      "category": "brokerage",
      "depletionAge": 73,
      "depletionYear": 2063,
      "subType": undefined,
    },
    {
      "category": "ira",
      "depletionAge": 74,
      "depletionYear": 2064,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 25921712.64,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 7540544.26,
    "projectedExpenses": 151024.87,
    "totalWithdrawal": 189573.24,
  },
  "sustainableWithdrawal": 189573.24,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 243340.46,
    "phase": "accumulation",
    "projectedSalary": 150000,
    "slotCount": 5,
    "totalEmployee": 31250,
    "totalEmployer": 3750,
  },
}
`;

exports[`engine snapshot parity > fixture 13: asymmetric retirement ages — early retirement at 55 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 65,
      "depletionYear": 2050,
      "subType": "traditional",
    },
    {
      "category": "401k",
      "depletionAge": 74,
      "depletionYear": 2059,
      "subType": "roth",
    },
    {
      "category": "403b",
      "depletionAge": 80,
      "depletionYear": 2065,
      "subType": "traditional",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 9337231.12,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 55,
    "endBalance": 3298930.49,
    "projectedExpenses": 115863.85,
    "totalWithdrawal": 148543.4,
  },
  "sustainableWithdrawal": 148543.4,
  "totalYears": 50,
  "warningCount": 0,
  "year0": {
    "endBalance": 679237.28,
    "phase": "accumulation",
    "projectedSalary": 180000,
    "slotCount": 5,
    "totalEmployee": 37500,
    "totalEmployer": 4500,
  },
}
`;

exports[`engine snapshot parity > fixture 14: RMDs — birth year 1955 (RMD start age 73) 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 68,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 68,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 68,
      "depletionYear": 2025,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 1763006.41,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 68,
    "endBalance": 1004976.92,
    "projectedExpenses": 60000,
    "totalWithdrawal": 30769.23,
  },
  "sustainableWithdrawal": 30769.23,
  "totalYears": 22,
  "warningCount": 1,
  "year0": {
    "endBalance": 1004976.92,
    "phase": "decumulation",
    "projectedExpenses": 60000,
    "totalWithdrawal": 30769.23,
  },
}
`;

exports[`engine snapshot parity > fixture 15: RMDs — birth year 1965 (RMD start age 75) 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 62,
      "depletionYear": 2027,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 62,
      "depletionYear": 2027,
      "subType": "roth",
    },
    {
      "category": "401k",
      "depletionAge": 76,
      "depletionYear": 2041,
      "subType": "traditional",
    },
    {
      "category": "401k",
      "depletionAge": 79,
      "depletionYear": 2044,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 81,
      "depletionYear": 2046,
      "subType": "traditional",
    },
    {
      "category": "ira",
      "depletionAge": 83,
      "depletionYear": 2048,
      "subType": "roth",
    },
    {
      "category": "brokerage",
      "depletionAge": 86,
      "depletionYear": 2051,
      "subType": undefined,
    },
    {
      "category": "hsa",
      "depletionAge": 87,
      "depletionYear": 2052,
      "subType": undefined,
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 0,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": 87,
  "portfolioDepletionYear": 2052,
  "retirementYear": {
    "age": 62,
    "endBalance": 811041.96,
    "projectedExpenses": 57784.37,
    "totalWithdrawal": 74082.52,
  },
  "sustainableWithdrawal": 74082.52,
  "totalYears": 30,
  "warningCount": 0,
  "year0": {
    "endBalance": 777631.46,
    "phase": "accumulation",
    "projectedSalary": 0,
    "slotCount": 5,
    "totalEmployee": 0,
    "totalEmployer": 0,
  },
}
`;

exports[`engine snapshot parity > fixture 16: RMD forces withdrawal above bracket-filling preference 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 70,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 70,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 70,
      "depletionYear": 2025,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 3276808.2,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 70,
    "endBalance": 1361094.87,
    "projectedExpenses": 50000,
    "totalWithdrawal": 17948.72,
  },
  "sustainableWithdrawal": 17948.72,
  "totalYears": 20,
  "warningCount": 1,
  "year0": {
    "endBalance": 1361094.87,
    "phase": "decumulation",
    "projectedExpenses": 50000,
    "totalWithdrawal": 17948.72,
  },
}
`;

exports[`engine snapshot parity > fixture 17: RMD + Roth conversion targeting 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 70,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 70,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 70,
      "depletionYear": 2025,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 1923495.08,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 70,
    "endBalance": 1078505.13,
    "projectedExpenses": 55000,
    "totalWithdrawal": 32051.28,
  },
  "sustainableWithdrawal": 32051.28,
  "totalYears": 20,
  "warningCount": 1,
  "year0": {
    "endBalance": 1078505.13,
    "phase": "decumulation",
    "projectedExpenses": 55000,
    "totalWithdrawal": 32051.28,
  },
}
`;

exports[`engine snapshot parity > fixture 18: portfolio depletion — very low balance, high expenses 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 66,
      "depletionYear": 2026,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2026,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2026,
      "subType": "roth",
    },
    {
      "category": "401k",
      "depletionAge": 67,
      "depletionYear": 2027,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 67,
      "depletionYear": 2027,
      "subType": "traditional",
    },
    {
      "category": "ira",
      "depletionAge": 67,
      "depletionYear": 2027,
      "subType": "roth",
    },
    {
      "category": "hsa",
      "depletionAge": 67,
      "depletionYear": 2027,
      "subType": undefined,
    },
    {
      "category": "brokerage",
      "depletionAge": 67,
      "depletionYear": 2027,
      "subType": undefined,
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 53665.66,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 66,
    "endBalance": 45164.09,
    "projectedExpenses": 82000,
    "totalWithdrawal": 100620.84,
  },
  "sustainableWithdrawal": 100620.84,
  "totalYears": 25,
  "warningCount": 1,
  "year0": {
    "endBalance": 142830.27,
    "phase": "accumulation",
    "projectedSalary": 0,
    "slotCount": 5,
    "totalEmployee": 0,
    "totalEmployer": 0,
  },
}
`;

exports[`engine snapshot parity > fixture 19: brokerage-heavy portfolio — goals tracking 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 70,
      "depletionYear": 2060,
      "subType": "traditional",
    },
    {
      "category": "401k",
      "depletionAge": 87,
      "depletionYear": 2077,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 31505708.24,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 60,
    "endBalance": 7443792.37,
    "projectedExpenses": 166854.97,
    "totalWithdrawal": 213916.63,
  },
  "sustainableWithdrawal": 213916.63,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 654197.89,
    "phase": "accumulation",
    "projectedSalary": 200000,
    "slotCount": 5,
    "totalEmployee": 33333.33,
    "totalEmployer": 5000,
  },
}
`;

exports[`engine snapshot parity > fixture 20: catch-up contributions — age 50, 60–63 super catch-up 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 75,
      "depletionYear": 2051,
      "subType": "traditional",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 3594808.65,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 2165358.7,
    "projectedExpenses": 106884.4,
    "totalWithdrawal": 137031.28,
  },
  "sustainableWithdrawal": 137031.28,
  "totalYears": 41,
  "warningCount": 0,
  "year0": {
    "endBalance": 245809.13,
    "phase": "accumulation",
    "projectedSalary": 160000,
    "slotCount": 5,
    "totalEmployee": 33333.33,
    "totalEmployer": 4000,
  },
}
`;

exports[`engine snapshot parity > fixture 21: SS torpedo — MFJ filing status 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 65,
      "depletionYear": 2030,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 65,
      "depletionYear": 2030,
      "subType": "roth",
    },
    {
      "category": "401k",
      "depletionAge": 80,
      "depletionYear": 2045,
      "subType": "traditional",
    },
    {
      "category": "401k",
      "depletionAge": 87,
      "depletionYear": 2052,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 1200119.95,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 1093316.82,
    "projectedExpenses": 79198.57,
    "totalWithdrawal": 101536.63,
  },
  "sustainableWithdrawal": 101536.63,
  "totalYears": 30,
  "warningCount": 0,
  "year0": {
    "endBalance": 856981.61,
    "phase": "accumulation",
    "projectedSalary": 0,
    "slotCount": 5,
    "totalEmployee": 0,
    "totalEmployer": 0,
  },
}
`;

exports[`engine snapshot parity > fixture 22: SS torpedo — Single filing status 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 65,
      "depletionYear": 2030,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 65,
      "depletionYear": 2030,
      "subType": "roth",
    },
    {
      "category": "401k",
      "depletionAge": 74,
      "depletionYear": 2039,
      "subType": "traditional",
    },
    {
      "category": "401k",
      "depletionAge": 77,
      "depletionYear": 2042,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 79,
      "depletionYear": 2044,
      "subType": "traditional",
    },
    {
      "category": "ira",
      "depletionAge": 80,
      "depletionYear": 2045,
      "subType": "roth",
    },
    {
      "category": "brokerage",
      "depletionAge": 82,
      "depletionYear": 2047,
      "subType": undefined,
    },
    {
      "category": "hsa",
      "depletionAge": 83,
      "depletionYear": 2048,
      "subType": undefined,
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 75268.94,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 686266.01,
    "projectedExpenses": 62227.45,
    "totalWithdrawal": 79778.79,
  },
  "sustainableWithdrawal": 79778.79,
  "totalYears": 30,
  "warningCount": 0,
  "year0": {
    "endBalance": 550161.03,
    "phase": "accumulation",
    "projectedSalary": 0,
    "slotCount": 5,
    "totalEmployee": 0,
    "totalEmployer": 0,
  },
}
`;

exports[`engine snapshot parity > fixture 23: SS income = 0 (no Social Security) 1`] = `
{
  "accountDepletions": [],
  "finalYear": {
    "age": 89,
    "endBalance": 24424844.17,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 7556354.53,
    "projectedExpenses": 136341.89,
    "totalWithdrawal": 174797.29,
  },
  "sustainableWithdrawal": 174797.29,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 243340.46,
    "phase": "accumulation",
    "projectedSalary": 150000,
    "slotCount": 5,
    "totalEmployee": 31250,
    "totalEmployer": 3750,
  },
}
`;

exports[`engine snapshot parity > fixture 24: filing status absent — falls back to flat SS taxation 1`] = `
{
  "accountDepletions": [],
  "finalYear": {
    "age": 89,
    "endBalance": 28206264.21,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 7570741.68,
    "projectedExpenses": 125854.05,
    "totalWithdrawal": 161351.35,
  },
  "sustainableWithdrawal": 161351.35,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 243340.46,
    "phase": "accumulation",
    "projectedSalary": 150000,
    "slotCount": 5,
    "totalEmployee": 31250,
    "totalEmployer": 3750,
  },
}
`;

exports[`engine snapshot parity > fixture 25: LTCG 0% zone — low income retiree stays in 0% bracket 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2026,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2026,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 1208073.6,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 66,
    "endBalance": 520299.19,
    "projectedExpenses": 41000,
    "totalWithdrawal": 11000,
  },
  "sustainableWithdrawal": 11000,
  "totalYears": 25,
  "warningCount": 1,
  "year0": {
    "endBalance": 497260.93,
    "phase": "accumulation",
    "projectedSalary": 0,
    "slotCount": 5,
    "totalEmployee": 0,
    "totalEmployer": 0,
  },
}
`;

exports[`engine snapshot parity > fixture 26: LTCG 15%/20% zone — higher income retiree 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2026,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2026,
      "subType": "roth",
    },
    {
      "category": "brokerage",
      "depletionAge": 79,
      "depletionYear": 2039,
      "subType": undefined,
    },
    {
      "category": "401k",
      "depletionAge": 86,
      "depletionYear": 2046,
      "subType": "traditional",
    },
    {
      "category": "401k",
      "depletionAge": 89,
      "depletionYear": 2049,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 1196346.01,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 66,
    "endBalance": 1674446.3,
    "projectedExpenses": 123000,
    "totalWithdrawal": 75000,
  },
  "sustainableWithdrawal": 75000,
  "totalYears": 25,
  "warningCount": 1,
  "year0": {
    "endBalance": 1639903.08,
    "phase": "accumulation",
    "projectedSalary": 0,
    "slotCount": 5,
    "totalEmployee": 0,
    "totalEmployer": 0,
  },
}
`;

exports[`engine snapshot parity > fixture 27: Roth conversion enabled via filingStatus — converts from brokerage proceeds 1`] = `
{
  "accountDepletions": [
    {
      "category": "ira",
      "depletionAge": 65,
      "depletionYear": 2035,
      "subType": "roth",
    },
    {
      "category": "401k",
      "depletionAge": 85,
      "depletionYear": 2055,
      "subType": "traditional",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 3141416.87,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 1868849.83,
    "projectedExpenses": 89605.92,
    "totalWithdrawal": 114879.39,
  },
  "sustainableWithdrawal": 114879.39,
  "totalYears": 35,
  "warningCount": 0,
  "year0": {
    "endBalance": 743775.39,
    "phase": "accumulation",
    "projectedSalary": 120000,
    "slotCount": 5,
    "totalEmployee": 25000,
    "totalEmployer": 3000,
  },
}
`;

exports[`engine snapshot parity > fixture 28: Roth conversion constrained near IRMAA cliff 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 65,
      "depletionYear": 2027,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 65,
      "depletionYear": 2027,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 65,
      "depletionYear": 2027,
      "subType": "roth",
    },
    {
      "category": "401k",
      "depletionAge": 83,
      "depletionYear": 2045,
      "subType": "traditional",
    },
    {
      "category": "401k",
      "depletionAge": 89,
      "depletionYear": 2051,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 1033729.78,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 1021438.63,
    "projectedExpenses": 68290.63,
    "totalWithdrawal": 87552.09,
  },
  "sustainableWithdrawal": 87552.09,
  "totalYears": 27,
  "warningCount": 0,
  "year0": {
    "endBalance": 945148.44,
    "phase": "accumulation",
    "projectedSalary": 100000,
    "slotCount": 5,
    "totalEmployee": 20833.33,
    "totalEmployer": 2500,
  },
}
`;

exports[`engine snapshot parity > fixture 29: Roth conversion + ACA subsidy window (pre-65) 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 62,
      "depletionYear": 2037,
      "subType": "traditional",
    },
    {
      "category": "401k",
      "depletionAge": 65,
      "depletionYear": 2040,
      "subType": "roth",
    },
    {
      "category": "403b",
      "depletionAge": 65,
      "depletionYear": 2040,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2041,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 67,
      "depletionYear": 2042,
      "subType": "traditional",
    },
    {
      "category": "ira",
      "depletionAge": 67,
      "depletionYear": 2042,
      "subType": "roth",
    },
    {
      "category": "brokerage",
      "depletionAge": 73,
      "depletionYear": 2048,
      "subType": undefined,
    },
    {
      "category": "hsa",
      "depletionAge": 75,
      "depletionYear": 2050,
      "subType": undefined,
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 0,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": 75,
  "portfolioDepletionYear": 2050,
  "retirementYear": {
    "age": 55,
    "endBalance": 1074319.68,
    "projectedExpenses": 73541.53,
    "totalWithdrawal": 94284.01,
  },
  "sustainableWithdrawal": 94284.01,
  "totalYears": 40,
  "warningCount": 0,
  "year0": {
    "endBalance": 685232.62,
    "phase": "accumulation",
    "projectedSalary": 140000,
    "slotCount": 5,
    "totalEmployee": 29166.67,
    "totalEmployer": 3500,
  },
}
`;

exports[`engine snapshot parity > fixture 30: Roth conversion skipped — zero brokerage balance 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 65,
      "depletionYear": 2030,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 65,
      "depletionYear": 2030,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 65,
      "depletionYear": 2030,
      "subType": "roth",
    },
    {
      "category": "brokerage",
      "depletionAge": 65,
      "depletionYear": 2030,
      "subType": undefined,
    },
    {
      "category": "401k",
      "depletionAge": 76,
      "depletionYear": 2041,
      "subType": "traditional",
    },
    {
      "category": "401k",
      "depletionAge": 81,
      "depletionYear": 2046,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 82,
      "depletionYear": 2047,
      "subType": "traditional",
    },
    {
      "category": "hsa",
      "depletionAge": 83,
      "depletionYear": 2048,
      "subType": undefined,
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 0,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": 83,
  "portfolioDepletionYear": 2048,
  "retirementYear": {
    "age": 65,
    "endBalance": 658597.66,
    "projectedExpenses": 56570.41,
    "totalWithdrawal": 72526.17,
  },
  "sustainableWithdrawal": 72526.17,
  "totalYears": 30,
  "warningCount": 0,
  "year0": {
    "endBalance": 437660.16,
    "phase": "accumulation",
    "projectedSalary": 80000,
    "slotCount": 5,
    "totalEmployee": 16666.67,
    "totalEmployer": 2000,
  },
}
`;

exports[`engine snapshot parity > fixture 31: RMD + Roth conversion + IRMAA — triple interaction 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 72,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 72,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "brokerage",
      "depletionAge": 78,
      "depletionYear": 2031,
      "subType": undefined,
    },
    {
      "category": "401k",
      "depletionAge": 83,
      "depletionYear": 2036,
      "subType": "traditional",
    },
    {
      "category": "ira",
      "depletionAge": 88,
      "depletionYear": 2041,
      "subType": "traditional",
    },
  ],
  "finalYear": {
    "age": 94,
    "endBalance": 4133719.39,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 72,
    "endBalance": 1636070.66,
    "projectedExpenses": 70000,
    "totalWithdrawal": 28000,
  },
  "sustainableWithdrawal": 28000,
  "totalYears": 23,
  "warningCount": 1,
  "year0": {
    "endBalance": 1636070.66,
    "phase": "decumulation",
    "projectedExpenses": 70000,
    "totalWithdrawal": 28000,
  },
}
`;

exports[`engine snapshot parity > fixture 32: Guyton-Klinger — upper guardrail triggers spending increase 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "brokerage",
      "depletionAge": 72,
      "depletionYear": 2031,
      "subType": undefined,
    },
    {
      "category": "401k",
      "depletionAge": 93,
      "depletionYear": 2052,
      "subType": "traditional",
    },
  ],
  "finalYear": {
    "age": 94,
    "endBalance": 7972101.9,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 66,
    "endBalance": 1392787.23,
    "projectedExpenses": 60000,
    "totalWithdrawal": 63829.79,
  },
  "sustainableWithdrawal": 63829.79,
  "totalYears": 29,
  "warningCount": 1,
  "year0": {
    "endBalance": 1392787.23,
    "phase": "decumulation",
    "projectedExpenses": 60000,
    "totalWithdrawal": 63829.79,
  },
}
`;

exports[`engine snapshot parity > fixture 33: Guyton-Klinger — lower guardrail triggers spending decrease 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "brokerage",
      "depletionAge": 67,
      "depletionYear": 2026,
      "subType": undefined,
    },
    {
      "category": "401k",
      "depletionAge": 86,
      "depletionYear": 2045,
      "subType": "traditional",
    },
  ],
  "finalYear": {
    "age": 94,
    "endBalance": 394213.98,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 66,
    "endBalance": 749591.49,
    "projectedExpenses": 80000,
    "totalWithdrawal": 85106.38,
  },
  "sustainableWithdrawal": 85106.38,
  "totalYears": 29,
  "warningCount": 1,
  "year0": {
    "endBalance": 749591.49,
    "phase": "decumulation",
    "projectedExpenses": 80000,
    "totalWithdrawal": 85106.38,
  },
}
`;

exports[`engine snapshot parity > fixture 34: Guyton-Klinger — prosperity rule skips inflation after loss year 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 67,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 67,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "brokerage",
      "depletionAge": 70,
      "depletionYear": 2028,
      "subType": undefined,
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 464276.56,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 67,
    "endBalance": 686666.23,
    "projectedExpenses": 55000,
    "totalWithdrawal": 20132.45,
  },
  "sustainableWithdrawal": 20132.45,
  "totalYears": 23,
  "warningCount": 1,
  "year0": {
    "endBalance": 686666.23,
    "phase": "decumulation",
    "projectedExpenses": 55000,
    "totalWithdrawal": 20132.45,
  },
}
`;

exports[`engine snapshot parity > fixture 35: G-K with budget override in a loss year 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 68,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 68,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "brokerage",
      "depletionAge": 71,
      "depletionYear": 2028,
      "subType": undefined,
    },
    {
      "category": "401k",
      "depletionAge": 89,
      "depletionYear": 2046,
      "subType": "traditional",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 408337.27,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 68,
    "endBalance": 586656.63,
    "projectedExpenses": 60000,
    "totalWithdrawal": 25430.46,
  },
  "sustainableWithdrawal": 25430.46,
  "totalYears": 22,
  "warningCount": 1,
  "year0": {
    "endBalance": 586656.63,
    "phase": "decumulation",
    "projectedExpenses": 60000,
    "totalWithdrawal": 25430.46,
  },
}
`;

exports[`engine snapshot parity > fixture 36: Year-0 with real YTD contributions (baseYearContributions) 1`] = `
{
  "accountDepletions": [],
  "finalYear": {
    "age": 89,
    "endBalance": 25505123.57,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 7544266.29,
    "projectedExpenses": 151024.87,
    "totalWithdrawal": 193621.63,
  },
  "sustainableWithdrawal": 193621.63,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 244398.46,
    "phase": "accumulation",
    "projectedSalary": 150000,
    "slotCount": 4,
    "totalEmployee": 32250,
    "totalEmployer": 3750,
  },
}
`;

exports[`engine snapshot parity > fixture 37: routeFromSpecs with ContributionSpec[] (dominant production path) 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 65,
      "depletionYear": 2055,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 65,
      "depletionYear": 2055,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 25464272.52,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 7536212.62,
    "projectedExpenses": 151024.87,
    "totalWithdrawal": 193621.63,
  },
  "sustainableWithdrawal": 193621.63,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 243340.46,
    "phase": "accumulation",
    "projectedSalary": 150000,
    "slotCount": 4,
    "totalEmployee": 31250,
    "totalEmployer": 3750,
  },
}
`;

exports[`engine snapshot parity > fixture 38: routeFromSpecs with salary-fraction specs + employer match 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 65,
      "depletionYear": 2055,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 65,
      "depletionYear": 2055,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 17818534.53,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 6028881.22,
    "projectedExpenses": 151024.87,
    "totalWithdrawal": 193621.63,
  },
  "sustainableWithdrawal": 193621.63,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 234700.1,
    "phase": "accumulation",
    "projectedSalary": 150000,
    "slotCount": 2,
    "totalEmployee": 20583.33,
    "totalEmployer": 6250,
  },
}
`;

exports[`engine snapshot parity > fixture 39: Individual account tracking through full projection 1`] = `
{
  "accountDepletions": [],
  "finalYear": {
    "age": 89,
    "endBalance": 25464271.77,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 7536212.48,
    "projectedExpenses": 151024.87,
    "totalWithdrawal": 193621.63,
  },
  "sustainableWithdrawal": 193621.63,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 243340.46,
    "phase": "accumulation",
    "projectedSalary": 150000,
    "slotCount": 5,
    "totalEmployee": 31250,
    "totalEmployer": 3750,
  },
}
`;

exports[`engine snapshot parity > fixture 40: Simple mode — collapsed single-balance input (no filing status, no tax features) 1`] = `
{
  "accountDepletions": [],
  "finalYear": {
    "age": 89,
    "endBalance": 6675906.14,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 3040490.75,
    "projectedExpenses": 88989.32,
    "totalWithdrawal": 114088.87,
  },
  "sustainableWithdrawal": 114088.87,
  "totalYears": 50,
  "warningCount": 0,
  "year0": {
    "endBalance": 229196.64,
    "phase": "accumulation",
    "projectedSalary": 100000,
    "slotCount": 5,
    "totalEmployee": 20833.33,
    "totalEmployer": 2500,
  },
}
`;

exports[`engine snapshot parity > fixture 41: rothConversionTarget override via raw scan 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 66,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "brokerage",
      "depletionAge": 68,
      "depletionYear": 2027,
      "subType": undefined,
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 2260207.33,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 66,
    "endBalance": 1020938.36,
    "projectedExpenses": 60000,
    "totalWithdrawal": 60000,
  },
  "sustainableWithdrawal": 60000,
  "totalYears": 24,
  "warningCount": 1,
  "year0": {
    "endBalance": 1020938.36,
    "phase": "decumulation",
    "projectedExpenses": 60000,
    "totalWithdrawal": 60000,
  },
}
`;

exports[`engine snapshot parity > fixture 42: Multiple saving + withdrawal + life change overrides in same projection 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 72,
      "depletionYear": 2052,
      "subType": "traditional",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 11893891.2,
  },
  "firstOverflowAge": 52,
  "firstOverflowAmount": 2152.66,
  "firstOverflowYear": 2032,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 60,
    "endBalance": 2888364.98,
    "projectedExpenses": 76805.07,
    "totalWithdrawal": 98468.03,
  },
  "sustainableWithdrawal": 98468.03,
  "totalYears": 45,
  "warningCount": 0,
  "year0": {
    "endBalance": 255683.81,
    "phase": "accumulation",
    "projectedSalary": 200000,
    "slotCount": 5,
    "totalEmployee": 41666.67,
    "totalEmployer": 5000,
  },
}
`;

exports[`engine snapshot parity > fixture 43: High-income: RMD + SS + LTCG + Roth + IRMAA all active 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 73,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 73,
      "depletionYear": 2025,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 94,
    "endBalance": 10401155.64,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 73,
    "endBalance": 4044227.55,
    "projectedExpenses": 120000,
    "totalWithdrawal": 94339.62,
  },
  "sustainableWithdrawal": 83777.38,
  "totalYears": 22,
  "warningCount": 1,
  "year0": {
    "endBalance": 4044227.55,
    "phase": "decumulation",
    "projectedExpenses": 120000,
    "totalWithdrawal": 94339.62,
  },
}
`;

exports[`engine snapshot parity > fixture 44: Brokerage ramp contribution across accumulation years 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 83,
      "depletionYear": 2078,
      "subType": "traditional",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 39134361.27,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 60,
    "endBalance": 8410236.86,
    "projectedExpenses": 151024.87,
    "totalWithdrawal": 193621.63,
  },
  "sustainableWithdrawal": 193621.63,
  "totalYears": 60,
  "warningCount": 0,
  "year0": {
    "endBalance": 235934.44,
    "phase": "accumulation",
    "projectedSalary": 120000,
    "slotCount": 5,
    "totalEmployee": 25000,
    "totalEmployer": 3000,
  },
}
`;

exports[`engine snapshot parity > fixture 45: perPersonSalaryOverrides with asymmetric salary changes 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 88,
      "depletionYear": 2073,
      "subType": "traditional",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 23865028.56,
  },
  "firstOverflowAge": 41,
  "firstOverflowAmount": 4909,
  "firstOverflowYear": 2026,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 6852511.32,
    "projectedExpenses": 133483.98,
    "totalWithdrawal": 171133.31,
  },
  "sustainableWithdrawal": 171133.31,
  "totalYears": 50,
  "warningCount": 0,
  "year0": {
    "endBalance": 268027.17,
    "phase": "accumulation",
    "projectedSalary": 250000,
    "slotCount": 5,
    "totalEmployee": 52083.33,
    "totalEmployer": 6250,
  },
}
`;

exports[`engine snapshot parity > fixture 46: Catch-up: super catch-up ages 60-63 only 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 73,
      "depletionYear": 2040,
      "subType": "traditional",
    },
    {
      "category": "401k",
      "depletionAge": 80,
      "depletionYear": 2047,
      "subType": "roth",
    },
    {
      "category": "403b",
      "depletionAge": 82,
      "depletionYear": 2049,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 85,
      "depletionYear": 2052,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 86,
      "depletionYear": 2053,
      "subType": "traditional",
    },
    {
      "category": "ira",
      "depletionAge": 87,
      "depletionYear": 2054,
      "subType": "roth",
    },
    {
      "category": "brokerage",
      "depletionAge": 89,
      "depletionYear": 2056,
      "subType": undefined,
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 126466.69,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 67,
    "endBalance": 1057759.65,
    "projectedExpenses": 89918.13,
    "totalWithdrawal": 69125.81,
  },
  "sustainableWithdrawal": 69125.81,
  "totalYears": 32,
  "warningCount": 0,
  "year0": {
    "endBalance": 250746.47,
    "phase": "accumulation",
    "projectedSalary": 180000,
    "slotCount": 5,
    "totalEmployee": 37500,
    "totalEmployer": 4500,
  },
}
`;

exports[`engine snapshot parity > fixture 47: Waterfall withdrawal with rothBracketTarget overlay 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "401k",
      "depletionAge": 77,
      "depletionYear": 2036,
      "subType": "traditional",
    },
    {
      "category": "401k",
      "depletionAge": 79,
      "depletionYear": 2038,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 84,
      "depletionYear": 2043,
      "subType": "traditional",
    },
    {
      "category": "ira",
      "depletionAge": 88,
      "depletionYear": 2047,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 1279591.16,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 66,
    "endBalance": 964050.55,
    "projectedExpenses": 70000,
    "totalWithdrawal": 79018.18,
  },
  "sustainableWithdrawal": 79018.18,
  "totalYears": 24,
  "warningCount": 1,
  "year0": {
    "endBalance": 964050.55,
    "phase": "decumulation",
    "projectedExpenses": 70000,
    "totalWithdrawal": 79018.18,
  },
}
`;

exports[`engine snapshot parity > fixture 48: Override: accountCaps + taxTypeCaps active simultaneously 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 85,
      "depletionYear": 2075,
      "subType": "traditional",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 36218978.83,
  },
  "firstOverflowAge": 38,
  "firstOverflowAmount": 5134.77,
  "firstOverflowYear": 2028,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 9593846.08,
    "projectedExpenses": 151024.87,
    "totalWithdrawal": 193621.63,
  },
  "sustainableWithdrawal": 193621.63,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 255683.81,
    "phase": "accumulation",
    "projectedSalary": 200000,
    "slotCount": 5,
    "totalEmployee": 41666.67,
    "totalEmployer": 5000,
  },
}
`;

exports[`engine snapshot parity > fixture 49: Override: reset: true followed by new override in later year 1`] = `
{
  "accountDepletions": [],
  "finalYear": {
    "age": 89,
    "endBalance": 31619367.46,
  },
  "firstOverflowAge": 38,
  "firstOverflowAmount": 3695.19,
  "firstOverflowYear": 2028,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 8749668.79,
    "projectedExpenses": 151024.87,
    "totalWithdrawal": 193621.63,
  },
  "sustainableWithdrawal": 193621.63,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 243340.46,
    "phase": "accumulation",
    "projectedSalary": 150000,
    "slotCount": 5,
    "totalEmployee": 31250,
    "totalEmployer": 3750,
  },
}
`;

exports[`engine snapshot parity > fixture 50: HSA with employer match 1`] = `
{
  "accountDepletions": [],
  "finalYear": {
    "age": 89,
    "endBalance": 20096635.66,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 6478001.14,
    "projectedExpenses": 151024.87,
    "totalWithdrawal": 193621.63,
  },
  "sustainableWithdrawal": 193621.63,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 236992.44,
    "phase": "accumulation",
    "projectedSalary": 120000,
    "slotCount": 5,
    "totalEmployee": 25000,
    "totalEmployer": 4000,
  },
}
`;

exports[`engine snapshot parity > fixture 51: Zero-balance account category with active withdrawal routing 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 67,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 67,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 67,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "hsa",
      "depletionAge": 67,
      "depletionYear": 2025,
      "subType": undefined,
    },
    {
      "category": "brokerage",
      "depletionAge": 67,
      "depletionYear": 2025,
      "subType": undefined,
    },
    {
      "category": "401k",
      "depletionAge": 77,
      "depletionYear": 2035,
      "subType": "traditional",
    },
    {
      "category": "401k",
      "depletionAge": 85,
      "depletionYear": 2043,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 132897.25,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 67,
    "endBalance": 408794.87,
    "projectedExpenses": 50000,
    "totalWithdrawal": 17948.72,
  },
  "sustainableWithdrawal": 17948.72,
  "totalYears": 23,
  "warningCount": 1,
  "year0": {
    "endBalance": 408794.87,
    "phase": "decumulation",
    "projectedExpenses": 50000,
    "totalWithdrawal": 17948.72,
  },
}
`;

exports[`engine snapshot parity > fixture 52: 3+ individual accounts with unequal balances in same category 1`] = `
{
  "accountDepletions": [],
  "finalYear": {
    "age": 89,
    "endBalance": 25464271.77,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 7536212.48,
    "projectedExpenses": 151024.87,
    "totalWithdrawal": 193621.63,
  },
  "sustainableWithdrawal": 193621.63,
  "totalYears": 55,
  "warningCount": 0,
  "year0": {
    "endBalance": 243340.46,
    "phase": "accumulation",
    "projectedSalary": 150000,
    "slotCount": 5,
    "totalEmployee": 31250,
    "totalEmployer": 3750,
  },
}
`;

exports[`engine snapshot parity > fixture 53: Waterfall withdrawal with explicit Roth preference + rothBracketTarget 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 66,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "401k",
      "depletionAge": 71,
      "depletionYear": 2030,
      "subType": "roth",
    },
    {
      "category": "401k",
      "depletionAge": 79,
      "depletionYear": 2038,
      "subType": "traditional",
    },
    {
      "category": "ira",
      "depletionAge": 83,
      "depletionYear": 2042,
      "subType": "roth",
    },
    {
      "category": "brokerage",
      "depletionAge": 89,
      "depletionYear": 2048,
      "subType": undefined,
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 1073156.89,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 66,
    "endBalance": 813200,
    "projectedExpenses": 65000,
    "totalWithdrawal": 65000,
  },
  "sustainableWithdrawal": 65000,
  "totalYears": 24,
  "warningCount": 1,
  "year0": {
    "endBalance": 813200,
    "phase": "decumulation",
    "projectedExpenses": 65000,
    "totalWithdrawal": 65000,
  },
}
`;

exports[`engine snapshot parity > fixture 54: IRMAA awareness enabled, income near cliff 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "brokerage",
      "depletionAge": 70,
      "depletionYear": 2029,
      "subType": undefined,
    },
    {
      "category": "401k",
      "depletionAge": 72,
      "depletionYear": 2031,
      "subType": "traditional",
    },
    {
      "category": "ira",
      "depletionAge": 76,
      "depletionYear": 2035,
      "subType": "traditional",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 2419205.76,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 66,
    "endBalance": 1458005.54,
    "projectedExpenses": 90000,
    "totalWithdrawal": 46000,
  },
  "sustainableWithdrawal": 46000,
  "totalYears": 24,
  "warningCount": 1,
  "year0": {
    "endBalance": 1458005.54,
    "phase": "decumulation",
    "projectedExpenses": 90000,
    "totalWithdrawal": 46000,
  },
}
`;

exports[`engine snapshot parity > fixture 55: IRMAA awareness disabled, income near cliff 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "brokerage",
      "depletionAge": 70,
      "depletionYear": 2029,
      "subType": undefined,
    },
    {
      "category": "401k",
      "depletionAge": 75,
      "depletionYear": 2034,
      "subType": "traditional",
    },
    {
      "category": "ira",
      "depletionAge": 81,
      "depletionYear": 2040,
      "subType": "traditional",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 2423603.86,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 66,
    "endBalance": 1454839.41,
    "projectedExpenses": 90000,
    "totalWithdrawal": 46000,
  },
  "sustainableWithdrawal": 46000,
  "totalYears": 24,
  "warningCount": 1,
  "year0": {
    "endBalance": 1454839.41,
    "phase": "decumulation",
    "projectedExpenses": 90000,
    "totalWithdrawal": 46000,
  },
}
`;

exports[`engine snapshot parity > fixture 56: RMD excess above G-K spending (high traditional balance, low spending) 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 75,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "403b",
      "depletionAge": 75,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 75,
      "depletionYear": 2025,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 94,
    "endBalance": 5730446.7,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 75,
    "endBalance": 2225438.97,
    "projectedExpenses": 40000,
    "totalWithdrawal": 91939.11,
  },
  "sustainableWithdrawal": 10638.3,
  "totalYears": 20,
  "warningCount": 1,
  "year0": {
    "endBalance": 2225438.97,
    "phase": "decumulation",
    "projectedExpenses": 40000,
    "totalWithdrawal": 91939.11,
  },
}
`;

exports[`engine snapshot parity > fixture 57: RMD forces large withdrawal with G-K active (tests interaction) 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 76,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "403b",
      "depletionAge": 76,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 76,
      "depletionYear": 2025,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 94,
    "endBalance": 2794409.88,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 76,
    "endBalance": 1631153.91,
    "projectedExpenses": 35000,
    "totalWithdrawal": 73887.17,
  },
  "sustainableWithdrawal": 10596.03,
  "totalYears": 19,
  "warningCount": 1,
  "year0": {
    "endBalance": 1631153.91,
    "phase": "decumulation",
    "projectedExpenses": 35000,
    "totalWithdrawal": 73887.17,
  },
}
`;

exports[`engine snapshot parity > fixture 58: Convergence loop with withdrawalAccountCaps active 1`] = `
{
  "accountDepletions": [
    {
      "category": "403b",
      "depletionAge": 67,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 67,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "brokerage",
      "depletionAge": 71,
      "depletionYear": 2029,
      "subType": undefined,
    },
    {
      "category": "hsa",
      "depletionAge": 73,
      "depletionYear": 2031,
      "subType": undefined,
    },
    {
      "category": "ira",
      "depletionAge": 83,
      "depletionYear": 2041,
      "subType": "traditional",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 1918528.66,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 67,
    "endBalance": 945014.89,
    "projectedExpenses": 80000,
    "totalWithdrawal": 46808.51,
  },
  "sustainableWithdrawal": 46808.51,
  "totalYears": 23,
  "warningCount": 1,
  "year0": {
    "endBalance": 945014.89,
    "phase": "decumulation",
    "projectedExpenses": 80000,
    "totalWithdrawal": 46808.51,
  },
}
`;

exports[`engine snapshot parity > fixture 59: decumulationAnnualExpenses + postRetirementInflationRate 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 72,
      "depletionYear": 2047,
      "subType": "traditional",
    },
    {
      "category": "401k",
      "depletionAge": 79,
      "depletionYear": 2054,
      "subType": "roth",
    },
    {
      "category": "403b",
      "depletionAge": 82,
      "depletionYear": 2057,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 85,
      "depletionYear": 2060,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 87,
      "depletionYear": 2062,
      "subType": "traditional",
    },
    {
      "category": "ira",
      "depletionAge": 88,
      "depletionYear": 2063,
      "subType": "roth",
    },
    {
      "category": "hsa",
      "depletionAge": 89,
      "depletionYear": 2064,
      "subType": undefined,
    },
    {
      "category": "brokerage",
      "depletionAge": 89,
      "depletionYear": 2064,
      "subType": undefined,
    },
  ],
  "finalYear": {
    "age": 94,
    "endBalance": 207668.87,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 2106776.88,
    "projectedExpenses": 123105.34,
    "totalWithdrawal": 157827.36,
  },
  "sustainableWithdrawal": 157827.36,
  "totalYears": 45,
  "warningCount": 0,
  "year0": {
    "endBalance": 250746.47,
    "phase": "accumulation",
    "projectedSalary": 180000,
    "slotCount": 5,
    "totalEmployee": 37500,
    "totalEmployer": 4500,
  },
}
`;

exports[`engine snapshot parity > fixture 60: traditionalFallbackRate with different accumulation/decumulation expenses 1`] = `
{
  "accountDepletions": [
    {
      "category": "brokerage",
      "depletionAge": 65,
      "depletionYear": 2035,
      "subType": undefined,
    },
    {
      "category": "401k",
      "depletionAge": 81,
      "depletionYear": 2051,
      "subType": "traditional",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 2215743.28,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 1111619.52,
    "projectedExpenses": 64004.23,
    "totalWithdrawal": 71769.68,
  },
  "sustainableWithdrawal": 71769.68,
  "totalYears": 35,
  "warningCount": 0,
  "year0": {
    "endBalance": 245809.13,
    "phase": "accumulation",
    "projectedSalary": 160000,
    "slotCount": 5,
    "totalEmployee": 33333.33,
    "totalEmployer": 4000,
  },
}
`;

exports[`engine snapshot parity > fixture 61: Two-person household with age gap crossing 65 1`] = `
{
  "accountDepletions": [
    {
      "category": "brokerage",
      "depletionAge": 67,
      "depletionYear": 2029,
      "subType": undefined,
    },
    {
      "category": "401k",
      "depletionAge": 80,
      "depletionYear": 2042,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 84,
      "depletionYear": 2046,
      "subType": "traditional",
    },
    {
      "category": "ira",
      "depletionAge": 84,
      "depletionYear": 2046,
      "subType": "traditional",
    },
  ],
  "finalYear": {
    "age": 94,
    "endBalance": 3276674.76,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 1235407.08,
    "projectedExpenses": 75645,
    "totalWithdrawal": 75645,
  },
  "sustainableWithdrawal": 75645,
  "totalYears": 32,
  "warningCount": 0,
  "year0": {
    "endBalance": 1096442.72,
    "phase": "accumulation",
    "projectedSalary": 220000,
    "slotCount": 5,
    "totalEmployee": 45833.33,
    "totalEmployer": 5500,
  },
}
`;

exports[`engine snapshot parity > fixture 62: Negative salaryGrowthRate with multi-person household 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 75,
      "depletionYear": 2050,
      "subType": "traditional",
    },
    {
      "category": "401k",
      "depletionAge": 89,
      "depletionYear": 2064,
      "subType": "roth",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 5615130.84,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 2521796.62,
    "projectedExpenses": 104277.47,
    "totalWithdrawal": 133689.06,
  },
  "sustainableWithdrawal": 133689.06,
  "totalYears": 40,
  "warningCount": 0,
  "year0": {
    "endBalance": 280370.52,
    "phase": "accumulation",
    "projectedSalary": 300000,
    "slotCount": 5,
    "totalEmployee": 62500,
    "totalEmployer": 7500,
  },
}
`;

exports[`engine snapshot parity > fixture 63: high-income single earner $250k (single-filer thresholds) 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 80,
      "depletionYear": 2065,
      "subType": "traditional",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 26731358.84,
  },
  "firstOverflowAge": 41,
  "firstOverflowAmount": 4909,
  "firstOverflowYear": 2026,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 8886493.98,
    "projectedExpenses": 222473.29,
    "totalWithdrawal": 285222.17,
  },
  "sustainableWithdrawal": 285222.17,
  "totalYears": 50,
  "warningCount": 0,
  "year0": {
    "endBalance": 537817.67,
    "phase": "accumulation",
    "projectedSalary": 250000,
    "slotCount": 5,
    "totalEmployee": 52083.33,
    "totalEmployer": 6250,
  },
}
`;

exports[`engine snapshot parity > fixture 64: pre-retiree age 60 at the accumulation→decumulation cusp 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 80,
      "depletionYear": 2045,
      "subType": "traditional",
    },
    {
      "category": "401k",
      "depletionAge": 88,
      "depletionYear": 2053,
      "subType": "roth",
    },
    {
      "category": "403b",
      "depletionAge": 89,
      "depletionYear": 2054,
      "subType": "traditional",
    },
  ],
  "finalYear": {
    "age": 89,
    "endBalance": 4056953.22,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 65,
    "endBalance": 2054442.98,
    "projectedExpenses": 90512.66,
    "totalWithdrawal": 116041.87,
  },
  "sustainableWithdrawal": 116041.87,
  "totalYears": 30,
  "warningCount": 0,
  "year0": {
    "endBalance": 1321973.48,
    "phase": "accumulation",
    "projectedSalary": 180000,
    "slotCount": 5,
    "totalEmployee": 45000,
    "totalEmployer": 4500,
  },
}
`;

exports[`engine snapshot parity > fixture 65: qcdMaximize fully covers a modest RMD (no taxable distribution forced) 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 75,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "403b",
      "depletionAge": 75,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 75,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "brokerage",
      "depletionAge": 79,
      "depletionYear": 2029,
      "subType": undefined,
    },
  ],
  "finalYear": {
    "age": 84,
    "endBalance": 2499086.87,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 75,
    "endBalance": 2159325.15,
    "projectedExpenses": 40000,
    "totalWithdrawal": 10638.3,
  },
  "sustainableWithdrawal": 10638.3,
  "totalYears": 10,
  "warningCount": 1,
  "year0": {
    "endBalance": 2159325.15,
    "phase": "decumulation",
    "projectedExpenses": 40000,
    "totalWithdrawal": 10638.3,
  },
}
`;

exports[`engine snapshot parity > fixture 66: qcdMaximize capped below a large RMD — remainder still forces a taxable distribution + reinvested excess 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 75,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "403b",
      "depletionAge": 75,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 75,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 75,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "hsa",
      "depletionAge": 75,
      "depletionYear": 2025,
      "subType": undefined,
    },
  ],
  "finalYear": {
    "age": 77,
    "endBalance": 6893089.39,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 75,
    "endBalance": 6314096.87,
    "projectedExpenses": 40000,
    "totalWithdrawal": 149540.74,
  },
  "sustainableWithdrawal": 10638.3,
  "totalYears": 3,
  "warningCount": 1,
  "year0": {
    "endBalance": 6314096.87,
    "phase": "decumulation",
    "projectedExpenses": 40000,
    "totalWithdrawal": 149540.74,
  },
}
`;

exports[`engine snapshot parity > fixture 67: same as fixture 66 but rmdExcessHandling='spend' — lower end balance, by design 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 75,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "403b",
      "depletionAge": 75,
      "depletionYear": 2025,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 75,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 75,
      "depletionYear": 2025,
      "subType": "roth",
    },
    {
      "category": "hsa",
      "depletionAge": 75,
      "depletionYear": 2025,
      "subType": undefined,
    },
  ],
  "finalYear": {
    "age": 77,
    "endBalance": 6517851.49,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 75,
    "endBalance": 6201141.41,
    "projectedExpenses": 40000,
    "totalWithdrawal": 149540.74,
  },
  "sustainableWithdrawal": 10638.3,
  "totalYears": 3,
  "warningCount": 1,
  "year0": {
    "endBalance": 6201141.41,
    "phase": "decumulation",
    "projectedExpenses": 40000,
    "totalWithdrawal": 149540.74,
  },
}
`;

exports[`engine snapshot parity > fixture 68: rmdSmoothingEnabled converts pre-RMD without enableRothConversions set (self-contained toggle) 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 66,
      "depletionYear": 2026,
      "subType": "roth",
    },
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2026,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2026,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 66,
      "depletionYear": 2026,
      "subType": "roth",
    },
    {
      "category": "hsa",
      "depletionAge": 66,
      "depletionYear": 2026,
      "subType": undefined,
    },
  ],
  "finalYear": {
    "age": 79,
    "endBalance": 5027879.8,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 66,
    "endBalance": 3034325.85,
    "projectedExpenses": 92250,
    "totalWithdrawal": 105584.62,
  },
  "sustainableWithdrawal": 105584.62,
  "totalYears": 15,
  "warningCount": 1,
  "year0": {
    "endBalance": 2962405.55,
    "phase": "accumulation",
    "projectedSalary": 0,
    "slotCount": 5,
    "totalEmployee": 0,
    "totalEmployer": 0,
  },
}
`;

exports[`engine snapshot parity > fixture 69: same household with rmdSmoothingEnabled=false — no pre-RMD conversions, and a measurably LARGER RMD at age 75 than fixture 68 1`] = `
{
  "accountDepletions": [
    {
      "category": "401k",
      "depletionAge": 66,
      "depletionYear": 2026,
      "subType": "roth",
    },
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2026,
      "subType": "traditional",
    },
    {
      "category": "403b",
      "depletionAge": 66,
      "depletionYear": 2026,
      "subType": "roth",
    },
    {
      "category": "ira",
      "depletionAge": 66,
      "depletionYear": 2026,
      "subType": "roth",
    },
    {
      "category": "hsa",
      "depletionAge": 66,
      "depletionYear": 2026,
      "subType": undefined,
    },
  ],
  "finalYear": {
    "age": 79,
    "endBalance": 5223091.19,
  },
  "firstOverflowAge": null,
  "firstOverflowAmount": null,
  "firstOverflowYear": null,
  "portfolioDepletionAge": null,
  "portfolioDepletionYear": null,
  "retirementYear": {
    "age": 66,
    "endBalance": 3056798.39,
    "projectedExpenses": 92250,
    "totalWithdrawal": 105584.62,
  },
  "sustainableWithdrawal": 105584.62,
  "totalYears": 15,
  "warningCount": 1,
  "year0": {
    "endBalance": 2962405.55,
    "phase": "accumulation",
    "projectedSalary": 0,
    "slotCount": 5,
    "totalEmployee": 0,
    "totalEmployer": 0,
  },
}
`;
